# Fantasy-Premier-League

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
tests/: test_getters.py
