[project]
name = "fantasy-premier-league"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4==4.8.1",
    "certifi==2019.11.28",
    "idna==2.8",
    "python-dateutil==2.8.1",
    "pytz==2019.3",
    "requests>=2.32.3",
    "six==1.13.0",
    "soupsieve==1.9.5",
    "urllib3==1.26.5",
    "pandas==1.3.5",
    "numpy==1.23.5",
]
